fixed spacing issue on resume page

--- a/src/index.css
+++ b/src/index.css
@@ -29,19 +29,17 @@ body {
   flex-grow: 1;
   justify-content: center;
   margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
   margin-bottom: 100px;
 }
 
 .card {
   background-color: var(--header);
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
   margin: 10px;
-  width: 260px;
+  min-width: 260px;
+  max-width: 260px;
   height: auto;
   border-radius: 15px;
   box-shadow: 4px 5px 8px var(--background-shadow);
@@ -49,19 +47,20 @@ body {
 }
 
 .card > * {
+  text-align: center;
   padding: 10px 0;
   font-family: 'Roboto Mono', sans-serif;
 }
 
 .card-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding-bottom: 20px;
 }
 
 .card-header {
-  display: flex;
-  flex: 1;
   width: 100%;
-  justify-content: center;
   background-color: var(--green);
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
@@ -73,12 +72,16 @@ body {
 }
 
 .card-button-container {
-  padding-bottom: 25px;
-  padding-top:n 0;
+  display: flex;
+  text-decoration: none;
+  flex: 1;
+  width: 100%;
+  padding: 0 5px 18px 0;
 }
 
 .card-button {
   font-family: 'Roboto Mono', sans-serif;
+  margin: 0 auto;
   font-weight: 500;
   border-radius: 5px;
   padding: 4px 10px;
@@ -95,7 +98,6 @@ body {
 .card-languages {
   font-size: 17px;
   display: flex;
-  flex: 1;
   width: 100%;
   justify-content: center;
   padding-top: 10px;
@@ -112,7 +114,6 @@ body {
   padding-left: 10px;
   padding-right: 10px;
 }
-
 /* projects end */
 
 /* navbar begin */
